Fix zh/ecip-1017 image links

--- a/_specs/zh/ecip-1017.md
+++ b/_specs/zh/ecip-1017.md
@@ -35,7 +35,7 @@ created: 2016/11/20
 
 [来源](http://ethdocs.org/en/latest/mining.html)
 
-![image alt text](ETC_MP_Perpetual.png)
+![image alt text](../../assets/ecip-1017/ETC_MP_Perpetual.png)
 
 ETC 网络目前的挖矿奖励模型如下:
 
@@ -53,7 +53,7 @@ ETC 网络目前的挖矿奖励模型如下:
 
 [来源](https://docs.google.com/spreadsheets/d/1Fs_RNEPSRJxP22PZmwxWjiulVVcu5Ic1GvBXCPCt9to/edit?usp=sharing)
 
-![image alt text](ETC_MP_5M20.png)
+![image alt text](../../assets/ecip-1017/ETC_MP_5M20.png)
 
 *Era" 被定义为特定区块数量里包含了一个特定的出币率。*
 
