Use new preamble style

--- a/_specs/ecip-1062.md
+++ b/_specs/ecip-1062.md
@@ -1,12 +1,14 @@
-### Title
-
-    ECIP: 1062
-    Title: Submit Block RPC
-    Author: Zachary Belford, zachary.b@etclabs.org
-    Discussions-To: Community Discord #ecips
-    Status: Draft
-    Type: Standards Track
-    Created: 2019-06-26
+---
+lang: en
+ecip: 1062
+title: Submit Block RPC
+author: Zachary Belford, zachary.b@etclabs.org
+discussions-to: Community Discord #ecips
+status: Draft
+type: Standards Track
+category: Interface
+created: 2019-06-26
+---
 
 ### Abstract
 
