Use new preamble style

--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -1,12 +1,13 @@
-### ECIP-1061: Atzlán EVM and Protocol Upgrades
-
-    ECIP: 1061
-    Title: Atzlán EVM and Protocol Upgrades
-    Status: Draft
-    Type: Standards Track
-    Author: Talha Cross (@soc1c)
-    Created: 2019-06-06
-    Discussions-To: https://github.com/ethereumclassic/ECIPs/issues/81
+---
+lang: en
+ecip: 1061
+title: Atzlán EVM and Protocol Upgrades
+status: Draft
+type: Meta
+author: Talha Cross (@soc1c)
+created: 2019-06-06
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
+---
 
 ### Simple Summary
 
