--- a/_specs/ecip-1039.md
+++ b/_specs/ecip-1039.md
@@ -12,7 +12,7 @@ created: 2017/11/14
 # Abstract
 
 This ECIP proposes a precise specification for eventual rounding issues around
-[ECIP1017 Monetary Policy](https://github.com/ethereumclassic/ECIPs/blob/master/ECIPs/ECIP-1017.md) calculation, particularly around
+[ECIP-1017 Monetary Policy](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) calculation, particularly around
 
 - block winner reward calculation
 - block winner reward for including uncles
