--- a/_specs/ecip-1062.md
+++ b/_specs/ecip-1062.md
@@ -52,7 +52,7 @@ This removes the dependency for miners to have a geth node with accounts that ne
 
 ### Implementation
 
-I think it's pretty straight forward. Looking at the above specification, we would be adding a eth_submitBlock rpc method. It's similar to eth_submitWork, except with fewer steps before broadcasting the block. 
+I think it's pretty straight forward. Looking at the above specification, we would be adding an `eth_submitBlock` RPC method. It's similar to `eth_submitWork`, except with fewer steps before broadcasting the block. 
 
 
 
