Changed the preamble box and status
Changed preamble box to a shaded box because it was too wide on Github and included a partial set of lines on ecips.ethereumclassic.org (pls check if it breaks or would be ok on the org site).

Changed status to `Final` from `Active` as the latter is not a formal status in the ecip process.

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -1,14 +1,12 @@
----
-lang: en
-ecip: 1000
-title: ECIP Process
-status: Active
-type: Meta
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/58
-author: Wei Tang (@sorpaas)
-created: 2017-06-29
-license: Apache-2
----
+	lang: en
+	ecip: 1000
+	title: ECIP Process
+	status: Final
+	type: Meta
+	discussions-to: https://github.com/ethereumclassic/ECIPs/issues/58
+	author: Wei Tang (@sorpaas)
+	created: 2017-06-29
+	license: Apache-2
 
 # Abstract
 
