--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -22,7 +22,7 @@ Because the ECIPs are maintained as text files in a versioned repository, their 
 
 This ECIP is licensed Apache-2, originally by [Luke Dashjr](https://github.com/luke-jr) under BSD 2-clause license.
 
-# ECIP workflow
+# ECIP Workflow
 
 ## Introduction
 
@@ -102,7 +102,7 @@ ECIP editors are intended to fulfill administrative and editorial responsibiliti
 * Merge the pull request when it is ready.
 * List the ECIP in [[README.mediawiki]]
 
-# ECIP format and structure
+# ECIP Format and Structure
 
 ## Specification
 
@@ -119,7 +119,7 @@ Each ECIP should have the following parts:
 - **Backwards compatibility** -- All ECIPs that introduce backwards incompatibilities must include a section describing these incompatibilities and their severity. The ECIP must explain how the author proposes to deal with these incompatibilities.
 - **Reference implementation** -- The reference implementation must be completed before any ECIP is given **"Final"** status, but it need not be completed before the ECIP is **"Accepted"**. It is better to finish the specification and rationale first and reach consensus on it before writing code. The final implementation must include test code and documentation appropriate for the Ethereum Classic protocol.
 
-### ECIP header preamble
+### ECIP Header Preamble
 
 Each ECIP must begin with an RFC 822 style header preamble. The headers must appear in the following order. Headers marked with "*" are optional and are described below. All other headers are required.
 
@@ -176,11 +176,11 @@ There are three types of ECIP:
 
 It is highly recommended that a single ECIP contain a single key proposal or new idea. The more focused the ECIP, the more successful it tends to be. A change to one client doesn't require an ECIP; a change that affects multiple clients, or defines a standard for multiple apps to use, does.
 
-An ECIP must meet certain minimum criteria. It must be a clear and complete description of the proposed enhancement. The enhancement must represent a net improvement. The proposed implementation, if applicable, must be solid and must not complicate the protocol unduly.
+An ECIP must meet certain minimum criteria. It must be a clear and complete description of the proposed enhancement. The enhancement must represent a net improvement.
 
-# ECIP status field
+## ECIP Status Field
 
-## Specification
+### Specification
 
 The typical paths of the status of ECIPs are as follows:
 
@@ -233,9 +233,9 @@ These criteria are considered objective ways to observe the de facto adoption of
 
 - The ECIP process exists for standardisation between independent projects. If something only affects one project, it should be done through that project's own internal processes, and never be proposed as a ECIP in the first place.
 
-# ECIP comments
+## ECIP comments
 
-## Specification
+### Specification
 
 Each ECIP should, in its preamble, link to a public wiki page with a summary tone of the comments on that page.
 
@@ -289,7 +289,7 @@ To avoid doubt: comments and status are unrelated metrics to judge an ECIP, and 
 
 - Participants should freely refrain from commenting outside of their area of knowledge or expertise. However, comments should not be censored, and participation should be open to the public.
 
-## ECIP licensing
+## ECIP Licensing
 
 ### Specification
 
