Changed category to ECBP
From ERC to ECBP.

--- a/_specs/ecip-1013.md
+++ b/_specs/ecip-1013.md
@@ -4,7 +4,7 @@ ecip: 1013
 title: ETC On-Chain Cryptographic Signing and Authentication Protocol
 status: Draft
 type: Standards Track
-category: ERC
+category: ECBP
 author: Cody W Burns <cody.w.burns@ethereumclassic.org>
 created: 2016-10-10
 ---
