Changed category to ECBP
From ERC to ECBP.

--- a/_specs/ecip-1021.md
+++ b/_specs/ecip-1021.md
@@ -5,7 +5,7 @@ title: Token standard
 author: Dexaran, <dexaran820@gmail.com>
 status: Draft
 type: Standards Track
-category: ERC
+category: ECBP
 created: 2017-03-07
 resolution: https://github.com/Dexaran/ERC23-tokens
 ---
