Changed category to ECBP
From ERC to ECBP.

--- a/_specs/ecip-1044.md
+++ b/_specs/ecip-1044.md
@@ -5,7 +5,7 @@ title: Formalize IPFS hash into ECNS (Ethereum Classic Name Service) resolver
 author: Phyrex Tsai <phyrex@portal.network>, Portal Network Team
 status: Draft
 type: Standards Track
-category: ERC
+category: ECBP
 created: 2018-05-12
 ---
 
