--- a/_specs/ecip-1064.md
+++ b/_specs/ecip-1064.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1064
 title: Communicating with 3rd parties
 status: Draft
-type: Informational
+type: Meta
 author: Dean Pappas (deancpappas@gmail.com)
 created: 2019-08-06
 ---
