Changed type to ECBP
Changed type from 'ERC' to 'ECBP'.

--- a/_specs/ecip-1050.md
+++ b/_specs/ecip-1050.md
@@ -6,7 +6,7 @@ author: Brooklyn Zelenka [@expede](https://github.com/expede), [Boris Mann](http
 discussions-to: https://fission.codes/blockchain/ethclassic
 status: Draft
 type: Standars Track
-category: ERC
+category: ECBP
 created: 2018-12-03
 ---
 
