--- a/_specs/ecip-1064.md
+++ b/_specs/ecip-1064.md
@@ -5,6 +5,7 @@ title: Communicating with 3rd parties
 status: Draft
 type: Meta
 author: Dean Pappas (deancpappas@gmail.com)
+discussions-to: Community Discord #ecips
 created: 2019-08-06
 ---
 
