--- a/_specs/ecip-1064.md
+++ b/_specs/ecip-1064.md
@@ -30,15 +30,15 @@ This process is comprised of 3 parts
 
 ### Representative Selection
 
-Each Client (geth/multigeth/parity/mantis) should have 1 representative selected to help in the outreach process.  In addition, there should be 2 representatives voted by the Client representatives that are unaffiliated with any of the Organizations.
+Each Client (geth/multigeth/parity/mantis) should have 1 representative selected to help in the outreach process.  In addition, there should be 2 representatives voted by the Client representatives that are unaffiliated with any of the Clients.
 
 This selection happens at the “Final Call” of the event.
 
 *For example, at the Final Call of Atlantis, the following representatives are selected:*
-1. ETCLabs – Christian
-2. ETCCoop – Yaz
+1. Geth – Christian
+2. Multigeth – Yaz
 3. Parity – Wei
-4. IOHK – Kevin
+4. Mantis – Kevin
 5. Community 1 – Donald
 6. Community 2 – Roy
 
@@ -79,7 +79,7 @@ A channel is defined as a contact name and contact medium, with a very high like
 *Example entry*
 
 - F2Pool | Miner | Thomas | Wechat - @thomasf2pool | 7/30/2019 | Community 1 – Donald
-- Coinbase | Exchange | Bill | Email – bill@coinbase.com | 7/25/2019 | IOHK – Kevin
+- Coinbase | Exchange | Bill | Email – bill@coinbase.com | 7/25/2019 | Mantis – Kevin
 - Coineal | Exchange | None | None | 7/20/2019 | ETCCoop - Yaz
 
 
@@ -98,8 +98,8 @@ A channel is defined as a contact name and contact medium, with a very high like
 
 *Example entry*
 
-- F2Pool | Community 1 – Donald | ETCLabs – Christian | Complete
-- Coinbase | IOHK – Kevin | Community 2 – Roy | InProgress1 
+- F2Pool | Community 1 – Donald | Geth – Christian | Complete
+- Coinbase | Mantis – Kevin | Community 2 – Roy | InProgress1 
 
 
 
