--- a/ecip-1063.md
+++ b/ecip-1063.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1063
 title: Ethereum Classic Integrated Decentralized Oracles and Smart Contracts
-author: Jesse Nguyen <jessebaotruong@gmail.com>
+author: Jesse Nguyen, <jessebaotruong@gmail.com>
 discussions-to: Community Discord #ecips
 status: Draft
 type: Standard Track
