--- a/_specs/ecip-1064.md
+++ b/_specs/ecip-1064.md
@@ -32,7 +32,12 @@ This process is comprised of 3 parts
 
 Each Client (geth/multigeth/parity/mantis) should have 1 representative selected to help in the outreach process.  In addition, there should be 2 representatives voted by the Client representatives that are unaffiliated with any of the Clients.
 
-This selection happens at the “Final Call” of the event.
+This selection happens during Final Call of Hard Fork Meta ECIP or when a "Black Swan" event occurs. 
+
+*Examples of "Black Swan" events are:*
+
+- 51% attack
+- SHA256 breaking
 
 *For example, at the Final Call of Atlantis, the following representatives are selected:*
 1. Geth – Christian
@@ -45,7 +50,7 @@ This selection happens at the “Final Call” of the event.
 
 ### Message Construction
 
-During Final Call, the author for the message will be assigned to one of the unaffiliated representatives. There will also be a send date agreed upon. The recommended send date is 6 weeks before the event. The draft will be submitted to the representatives no later than 1 week before the send date. 
+The author for the message will be assigned to one of the unaffiliated representatives. There will also be a send date agreed upon. The recommended send date for a Hard Fork is 6 weeks, and immediately for a "Black Swan" event.  The draft will be submitted to the representatives no later than 1 week before the send date. 
 
 *Example Message: Initial Communications Setup*
 
