Add discussions link for ECIP-1056

--- a/_specs/ecip-1056.md
+++ b/_specs/ecip-1056.md
@@ -5,6 +5,7 @@ title: Agharta EVM and Protocol Upgrades
 status: Draft
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>, Wei Tang <hi@that.world>
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/131
 created: 2019-03-25
 ---
 
