--- a/_specs/ecip-1054.md
+++ b/_specs/ecip-1054.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1054
 title: Atlantis EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>
 created: 2019-02-11
@@ -62,6 +62,7 @@ Technical specifications for each EIP can be found at those documents respective
 - [EIP 211](https://eips.ethereum.org/EIPS/eip-211) (New opcodes `RETURNDATASIZE` and `RETURNDATACOPY`)
 - [EIP 214](https://eips.ethereum.org/EIPS/eip-214) (New opcode `STATICCALL`)
 - [EIP 658](https://eips.ethereum.org/EIPS/eip-658) (Embedding transaction status code in receipts)
+- [EIP 684](https://github.com/ethereum/EIPs/issues/684) (Prevent overwriting contracts)
 
 In case any of the before mentioned proposals define a variable similar to the pattern `*_FORK_BLKNUM` named after _Spurious Dragon_ or _Byzantium_, it shall be replaced by a `ATLANTIS_FORK_BLKNUM`.
 
