Change status to final
Changing status to final according to ECIP-1000.

--- a/_specs/ecip-1054.md
+++ b/_specs/ecip-1054.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1054
 title: Atlantis EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: Isaac Ardis <isaac.a@etclabs.org>
 created: 2019-02-11
