Adding Discussion-to link.
Adding Discussion-to link: https://github.com/ethereumclassic/ECIPs/issues/138

--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -6,6 +6,7 @@ author: Cody Burns <cody.w.burns@gmail.com>
 status: Draft
 type: Standard
 category: Core
+Discussions-to: https://github.com/ethereumclassic/ECIPs/issues/138
 created: 2018-04-16
 ---
 
