--- a/_specs/ecip-1065.md
+++ b/_specs/ecip-1065.md
@@ -23,15 +23,18 @@ changes specified in "Specification" section.
 
 ### Specification
 
-At hard fork block, enable EIP-1702:
+At hard fork block, enable [EIP-1702](https://eips.ethereum.org/EIPS/eip-1702):
 
 * Define the previous EVM version as version `0`.
 * Define a new version `1`, with the following EVM modifications
   applied on it.
-  * **38-PROBE**: Enable the `HAS_FEATURE` feature probe opcode.
-  * **39-UNGAS**: Remove all observable behavior of gas cost in EVM
-    and change out-of-gas exception to trap the whole transaction.
-  * **40-UNUSED**: Disable deployment of unused opcodes.
+  * **[38-PROBE](https://specs.that.world/38-probe/)**: Enable the
+    `HAS_FEATURE` feature probe opcode.
+  * **[39-UNGAS](https://specs.that.world/39-ungas/)**: Remove all
+    observable behavior of gas cost in EVM and change out-of-gas
+    exception to trap the whole transaction.
+  * **[40-UNUSED](https://specs.that.world/40-unused/)**: Disable
+    deployment of unused opcodes.
   
 ### Discussion
 
