Basic fixes to frontmatter

--- a/_specs/ecip-1055.md
+++ b/_specs/ecip-1055.md
@@ -1,17 +1,15 @@
 ---
 ecip: 1055
 title: Flyclient - Succinct PoW Using Merkle Mountain Ranges
-author: Zac Mitton @zmitton
+author: Zac Mitton (@zmitton)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/144
 status: Draft
 type: Standards Track
-category (*only required for Standard Track): Core
+category: Core
 created: 2019-03-12
-replaces (*optional): 210, 1094, 641
-
 ---
 
-## Simple Summary
+## Simple Summaryhttps://github.com/etclabscore/ECIPs/blob/master/ECLIPs/ECIP-draft_succinct-proofs.md
 
 The addition of a Merkle-Mountain-Range (MMR) root to blockheaders
 
