--- a/_specs/ecip-1055.md
+++ b/_specs/ecip-1055.md
@@ -9,7 +9,7 @@ category: Core
 created: 2019-03-12
 ---
 
-## Simple Summaryhttps://github.com/etclabscore/ECIPs/blob/master/ECLIPs/ECIP-draft_succinct-proofs.md
+## Simple Summary
 
 The addition of a Merkle-Mountain-Range (MMR) root to blockheaders
 
@@ -51,9 +51,9 @@ There are 2 main strategies for verifying a `block`:
 
 - `block_x` is proven to have cost about `5 Ether` to produce.
 
-nowing that something cost 5 Ether is not sufficient for most applications. By checking a suffix (blocks after this point in the chain) we can prove that the data cost at least `5n Ether` to produce, where n is the number of blocks checked.
+Knowing that something cost 5 Ether is not sufficient for most applications. By checking a suffix (blocks after this point in the chain) we can prove that the data cost at least `5n Ether` to produce, where `n` is the number of blocks checked.
 
-With the simple assumption that the honest chain has 2/3 of the total mining power
+With the simple assumption that the honest chain has 2/3 of the total mining power.
 
 The next thing we can do is to request the header before that and validate its PoW as well -->
 
