--- a/_specs/ecip-1041.md
+++ b/_specs/ecip-1041.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1041
 title: Remove Difficulty Bomb
 author: Igor Artamonov <splix@etcdevteam.com>
-status: Accepted
+status: Final
 type: Standards Track
 category: Core
 created: 2018-01-10
