--- a/_specs/ecip-1065.md
+++ b/_specs/ecip-1065.md
@@ -19,7 +19,7 @@ chance of breaking existing contracts.
 This document proposes the following blocks at which to implement the
 changes specified in "Specification" section.
 
-- `10_000_000` on Ethereum Classic PoW-mainnet.
+- Undecided on Ethereum Classic PoW-mainnet.
 
 ### Specification
 
