--- a/_specs/ecip-1050.md
+++ b/_specs/ecip-1050.md
@@ -4,7 +4,7 @@ ecip: 1050
 title: Status Codes
 author: Brooklyn Zelenka [@expede](https://github.com/expede), [Boris Mann](https://github.com/bmann)
 discussions-to: https://fission.codes/blockchain/ethclassic
-status: Draft
+status: Last Call
 type: Standars Track
 category: ECBP
 created: 2018-12-03
