add testnet block numbers for agharta

--- a/_specs/ecip-1056.md
+++ b/_specs/ecip-1056.md
@@ -25,9 +25,9 @@ _Constaninople_ and _Petersburg_ hardforks. The proposed changes for Ethereum Cl
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
-- `TBD` on Morden Classic Testnet (November 13, 2019)
-- `TBD` on Mordor Classic Testnet (November 20, 2019)
-- `TBD` on Kotti Classic Testnet (December 11, 2019)
+- `5_000_381` on Morden Classic Testnet (November 13, 2019)
+- `301_243` on Mordor Classic Testnet (November 20, 2019)
+- `1_705_549` on Kotti Classic Testnet (December 11, 2019)
 - `TBD` on Ethereum Classic Mainnet (January 15, 2020)
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
