(re)corrected dusscusion-to link

--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -1,10 +1,10 @@
 ---
 lang: en
 ecip: 1067
-title: Standardize OS Level Management of Signature Handling
+title: Standardize OS Level Management of Signature Handling ("invoke-signer")
 status: Draft
 type: Interface
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/58
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/147
 author: Zac Mitton
 created: 2019-02-07
 ---
