fix: more license trash

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -18,10 +18,6 @@ We intend ECIPs to be the primary mechanism for proposing new features, for coll
 
 Because the ECIPs are maintained as text files in a versioned repository, their revision history is the historical record of the feature proposal.
 
-# Copyright
-
-This ECIP is licensed Apache-2, originally by [Luke Dashjr](https://github.com/luke-jr) under BSD 2-clause license.
-
 # ECIP Workflow
 
 ## Introduction
@@ -112,7 +108,6 @@ Each ECIP should have the following parts:
 
 - **Preamble** -- Headers containing metadata about the ECIP [see below](https://github.com/ethereumclassic/ECIPs/blob/master/ECIPs/ECIP-1000.mediawiki#ecip-header-preamble).
 - **Abstract** -- A short (~200 word) description of the technical issue being addressed.
-- **Copyright** -- The ECIP must be explicitly licensed under acceptable copyright terms [see below](https://github.com/ethereumclassic/ECIPs/blob/master/ECIPs/ECIP-1000.mediawiki#ecip-licensing)
 - **Specification** -- The technical specification should describe the syntax and semantics of any new feature. It should be detailed enough to allow competing, interoperable implementations for any of the current Ethereum Classic platforms.
 - **Motivation** -- The motivation is critical for ECIPs that want to change the Ethereum Classic protocol. It should clearly explain why the existing protocol is inadequate to address the problem that the ECIP solves.
 - **Rationale** -- The rationale fleshes out the specification by describing what motivated the design and why particular design decisions were made. It should describe alternate designs that were considered and related work. It should provide evidence of consensus within the community and discuss important objections or concerns raised during discussion.
@@ -133,8 +128,6 @@ Each ECIP must begin with an RFC 822 style header preamble. The headers must app
 - **Status:** (Draft | Last Call | Accepted | Final | Deferred | Replaced | Rejected | Withdrawn)
 - **Type:** (Standards Track | Informational | Process)
 - **Created:** (date created on, in ISO 8601 (yyyy-mm-dd) format)
-- **License:** (abbreviation for approved license(s))
-- **License-Code:** (abbreviation for code under different approved license(s))
 - **Requires:** (ECIP number(s))
 - **Replaces:** (ECIP number)
 - **Superseded-By:** (ECIP number)
@@ -291,9 +284,7 @@ To avoid doubt: comments and status are unrelated metrics to judge an ECIP, and 
 
 ## ECIP Licensing
 
-### Specification
-
-You may not specify a license.
+You may not specify a license. Claims to any license other than the one specified in the repository root are invalid.
 
 # See Also
 
