fix: add link to license

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -284,7 +284,7 @@ To avoid doubt: comments and status are unrelated metrics to judge an ECIP, and 
 
 ## ECIP Licensing
 
-You may not specify a license. Claims to any license other than the one specified in the repository root are invalid.
+You may not specify a license. Claims to any license other than the one specified [here](https://github.com/ethereumclassic/ECIPs/blob/master/LICENSE) are invalid.
 
 # See Also
 
