--- a/_specs/ecip-1016.md
+++ b/_specs/ecip-1016.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1016
 title: ETC Improvement Proposal Management
-status: Draft
+status: Withdrawn
 type: Meta
 author: Cody W Burns <Cody.w.burns@ethereumclassic.com>
 created: 2016-10-25
