doc: Update ECIP-1070 links and title

--- a/_specs/ecip-1070.md
+++ b/_specs/ecip-1070.md
@@ -1,8 +1,8 @@
 ---
 eip: 1057
-title: ProgPoW, a Programmatic Proof-of-Work
+title: ProgPoW, a Programmatic Proof-of-Work, for Ethereum Classic
 author: Yaz Khoury <yaz@etccooperative.org>
-discussions-to: 
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/172
 status: Draft
 type: Standards Track
 category: Core
