fix: Point document to ECIP-1070

--- a/_specs/ecip-1070.md
+++ b/_specs/ecip-1070.md
@@ -1,5 +1,5 @@
 ---
-eip: 1057
+ecip: 1070
 title: ProgPoW, a Programmatic Proof-of-Work, for Ethereum Classic
 author: Yaz Khoury <yaz@etccooperative.org>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/172
