--- a/_specs/ecip-1043.md
+++ b/_specs/ecip-1043.md
@@ -6,7 +6,7 @@ author: Cody Burns <cody.w.burns@gmail.com>, Wolf Spraul <wolf@linzhi.io>
 status: Draft
 type: Standard
 category: Core
-Discussions-to: https://github.com/ethereumclassic/ECIPs/issues/11
+iscussions-to: https://github.com/ethereumclassic/ECIPs/issues/11
 created: 2018-04-16
 ---
 
