--- a/_specs/ecip-1074.md
+++ b/_specs/ecip-1074.md
@@ -13,7 +13,7 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
 
 Enable the outstanding Ethereum Foundation _Istanbul_ network protocol
 upgrades on the Ethereum Classic network in a hard-fork code-named
-_Xichun_ to enable maximum compatibility across these networks.
+_Tanchun_ to enable maximum compatibility across these networks.
 
 In particular, enables account versioning EIP-1702 with
 forward-compatible EVM changes.
