Created a new ECIP-1075 from Afri's ECIP-1061, which is the "Basic Edition".
Reworked ECIP-1061 to point to the four proposed Aztlán "Editions", with ECIP-1061 now only containing minimal content.

--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -17,14 +17,15 @@ Classic network in a hard-fork code-named _Aztlán_ to enable maximum compatibil
 ### Abstract
 
 Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the
-_Istanbul_ hardforks. The proposed changes for Ethereum Classic's _Aztlán_ upgrade include:
+_Istanbul_ hardforks.
 
-- Add Blake2 compression function `F` precompile
-- Reduce alt_bn128 precompile gas costs
-- Add ChainID opcode
-- Repricing for trie-size-dependent opcodes
-- Calldata gas cost reduction
-- Rebalance net-metered SSTORE gas cost with consideration of SLOAD gas cost change
+There are four alterative proposals with varying levels of backwards and
+forwards compatibility for the _Aztlán_ upgrade:
+
+- [ECIP-1072](https://ecips.ethereum.org/ECIPS/ecip-1072) - Yuanchun Edition
+- [ECIP-1073](https://ecips.ethereum.org/ECIPS/ecip-1073) - Xichun Edition
+- [ECIP-1074](https://ecips.ethereum.org/ECIPS/ecip-1074) - Tanchun Edition
+- [ECIP-1075](https://ecips.ethereum.org/ECIPS/ecip-1075) - Basic Edition
 
 This document proposes the following blocks at which to implement these changes in the Classic networks:
 
@@ -35,46 +36,7 @@ This document proposes the following blocks at which to implement these changes 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_
 section of this document.
 
-### Motivation
-
-To enhance the Ethereum Virtual Machine's (EVM) capabilities, various opcodes shall be added to the Ethereum Classic
-networks, all of which have been in use on the Ethereum Foundation networks since end of 2019.
-
-### Specification
-
-Technical specifications for each EIP can be found at those documents respectively:
-
-- [EIP-152](https://eips.ethereum.org/EIPS/eip-152): Add Blake2 compression function `F` precompile
-- [EIP-1108](https://eips.ethereum.org/EIPS/eip-1108): Reduce alt_bn128 precompile gas costs
-- [EIP-1344](https://eips.ethereum.org/EIPS/eip-1344): Add ChainID opcode
-- [EIP-1884](https://eips.ethereum.org/EIPS/eip-1884): Repricing for trie-size-dependent opcodes
-- [EIP-2028](https://eips.ethereum.org/EIPS/eip-2028): Calldata gas cost reduction
-- [EIP-2200](https://eips.ethereum.org/EIPS/eip-2200): Rebalance net-metered SSTORE gas cost with consideration of SLOAD gas cost change
-
-### Rationale
-
-__Interoperability__: Establishing and maintaining interoperable behavior between Ethereum clients is essential for
-developers and end-user adoption, yielding benefits for all participating chains (e.g., ETH and ETC, Ropsten and Mordor,
-Görli and Kotti).
-
-__Immutability__: None of the introduced new opcodes in the EVM has the potential to change the behavior of existing
-contracts; in the case where previously an arbitrary invalid bytecode would have been deployed to the network, none of
-them would be able to modify the state of the Ethereum Classic networks retrospectively. Adding opcodes to the EVM
-increases its functionality and should be considered a feature upgrade rather than a modification.
-
-### Implementation
-
-Adoption of the content of this ECIP requires a hard fork as it introduces changes that are not backward compatible.
-
-The following clients with Ethereum Classic support implement the _Istanbul_ features currently:
-
-- Parity Ethereum
-- Multi-Geth
-- Hyperledger Besu
-
 ### Final Note
-
-Both, the Geth Classic client and the Morden testnet will no longer be supported by the community and not recieve the Aztlán ugrades.
 
 - Users of the Geth Classic client are urged to migrate their services to Parity Ethereum, Multi-Geth, or Hyperledger Besu. It is no longer recommended to run Geth Classic in production.
 - Users of the Morden Classic testnet are urged to migrate their applications to the Kotti Classic or Morder Classic testnets.
