--- a/_specs/ecip-1073.md
+++ b/_specs/ecip-1073.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1073
-title: Xichun EVM and Protocol Upgrades
+title: Aztlán EVM and Protocol Upgrades (Xichun Edition)
 status: Draft
 type: Meta
 author: Wei Tang (@sorpaas)
@@ -22,13 +22,6 @@ In particular, enables account versioning EIP-1702.
 
 Add support for a subset of protocol-impacting changes introduced in
 the Ethereum Foundation (ETH) network via the _Istanbul_ hardforks.
-
-This document proposes the following blocks at which to implement
-these changes in the Classic networks:
-
-- `TBD` on Mordor Classic PoW-testnet (Feb 5th, 2020)
-- `TBD` on Kotti Classic PoA-testnet (Feb 12th, 2020)
-- `TBD` on Ethereum Classic PoW-mainnet (March 25th, 2020)
 
 For more information on the opcodes and their respective EIPs and
 implementations, please see the _Specification_ section of this
