Corrected author for ECIP-1075, which is now a net-new ECIP, pointing to the various Aztlán editions. This would become the primary "Meta" for Aztlán.

--- a/_specs/ecip-1075.md
+++ b/_specs/ecip-1075.md
@@ -4,9 +4,10 @@ ecip: 1075
 title: Aztlán EVM and Protocol Upgrades
 status: Draft
 type: Meta
-author: Talha Cross (@soc1c)
-created: 2019-06-06
-discussions-to: https://github.com/ethereumclassic/ECIPs/issues/81
+author: Bob Summerwill (@bobsummerwill)
+created: 2019-11-16
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/188
+license: Apache-2.0
 ---
 
 ### Simple Summary
@@ -43,4 +44,5 @@ section of this document.
 
 ## Copyright
 
-Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
+This work is licensed under [Apache License, Version
+2.0](http://www.apache.org/licenses/).
