ecbp-1076: add besu config example

--- a/_specs/ecip-10746.md
+++ b/_specs/ecip-10746.md
@@ -83,6 +83,11 @@ A Multi-Geth node configured to vote for Ethash with DAG size limit (ECBP-1076-B
 ```
 geth --miner.extradata "76B01 Funny Classic Pool" --miner.gaslimit 1000000 [OPTIONS]
 ```
+A Besu node configured to vote for ProgPoW (ECBP-1076-D) and an increase of the block gas limit:
+
+```
+besu --miner-extra-data="76D15 LOL-lonely Miner 1337" --target-gas-limit=15000000 [OPTIONS]
+```
 
 ### Implementation
 All clients implement custom extra data and block gas limit target voting. No custom implementation is required.
