--- a/_specs/ecip-1022.md
+++ b/_specs/ecip-1022.md
@@ -163,7 +163,7 @@ chain changes (including after reorganizations).
 
 The following diagram illustrates the generalized state machine:
 
-![State transactions](ECIP-1022/bip-0135-states-small.png)
+![State transactions](../assets/ecip-1022/bip-0135-states-small.png)
 
 The genesis block of any chain SHALL have the state DEFINED for each
 deployment.
