Added DCO equivalent section to ECIP-1075.

--- a/_specs/ecip-1075.md
+++ b/_specs/ecip-1075.md
@@ -44,5 +44,6 @@ section of this document.
 
 ## Copyright
 
-This work is licensed under [Apache License, Version
-2.0](http://www.apache.org/licenses/).
+This work is licensed under the [Apache License, Version 2.0](https://www.apache.org/licenses/LICENSE-2.0).  The author, Bob Summerwill, attests to his sole authorship of this work, and that he is able to contribute this work to the ECIP process under the Apache 2.0 licence.
+
+He further attests that he neither holds nor is aware of any patents, trademarks, copyright issues or other IP hinderances associated with this work.
