Update and rename ecip-10746.md to ecip-1076.md

--- a/_specs/ecip-1076.md
+++ b/_specs/ecip-1076.md
@@ -1,4 +1,5 @@
 ---
+lang: en
 ecip: 1076
 title: Mining Algorithm Change Process
 author: Talha Cross (@soc1c)
@@ -93,4 +94,4 @@ besu --miner-extra-data="76D15 LOL-lonely Miner 1337" --target-gas-limit=1500000
 All clients implement custom extra data and block gas limit target voting. No custom implementation is required.
 
 ### Copyright/Licensing
-Copyright and related rights waived via [CC0.](https://creativecommons.org/publicdomain/zero/1.0/)
+Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
