--- a/_specs/ecip-1076.md
+++ b/_specs/ecip-1076.md
@@ -20,7 +20,7 @@ Currently, the following options are debatable.
 
 - **ECBP-1076-A**: _"Ethash Status Quo."_ The mining algorithm will be untouched as it is since genesis, as **Ethash** function with a statically **increasing DAG**.
 - **ECBP-1076-B**: _"Ethash Limited DAG."_ The mining algorithm will be untouched as it is since genesis, as **Ethash** function. However, the **DAG size will be limited** as specified in [ECIP-1043](https://ecips.ethereumclassic.org/ECIPs/ecip-1043).
-- **ECBP-1076-C**: _"SHA3."_ The mining algorithm will be **changed to SHA3** as specified in [ECIP-1049](https://ecips.ethereumclassic.org/ECIPs/ecip-1049).
+- **ECBP-1076-C**: _"Keccak256 (SHA3)."_ The mining algorithm will be **changed to Keccak256** as specified in [ECIP-1049](https://ecips.ethereumclassic.org/ECIPs/ecip-1049).
 - **ECBP-1076-D**: _"ProgPoW."_ The mining algorithm will be **changed to ProgPow** as specified in [ECIP-1070](https://ecips.ethereumclassic.org/ECIPs/ecip-1070).
 
 Eventually, the community has to decide on one.
@@ -28,7 +28,7 @@ Eventually, the community has to decide on one.
 ### Process
 The following process facilitates all stakeholders in various stages.
 
-1. _"Tech Stage."_ Core and application developers meet in regular calls to evaluate the feasibility of the Ethash status quo, the limited DAG size proposal (ECIP-1043), the SHA3 proposal (ECIP-1049), and the ProgPoW proposal (ECIP-1070).
+1. _"Tech Stage."_ Core and application developers meet in regular calls to evaluate the feasibility of the Ethash status quo, the limited DAG size proposal (ECIP-1043), the Keccak256 proposal (ECIP-1049), and the ProgPoW proposal (ECIP-1070).
 
     If there is no technical objection to each of the proposals, the proposals can be **moved to "Last Call"** state, regardless of whether they will be considered in future or not. As a result, none, one, or many competing proposals can be in "Last Call" state at the same time.
 
@@ -73,7 +73,7 @@ No signaling favors the status quo (ECBP-1076-A) and effectively rejects ECIPs 1
 ### Mining Node Configuration Examples
 The following configuration examples do not favor one option over another and only serve the purpose of demonstration.
 
-A Parity Ethereum node configured to vote for SHA3 (ECBP-1076-C) not caring about the block gas limit:
+A Parity Ethereum node configured to vote for Keccak256 (ECBP-1076-C) not caring about the block gas limit:
 
 ```
 parity --extra-data "76C00 Happy Trigger Farm" [OPTIONS]
