--- a/_specs/ecip-1022.md
+++ b/_specs/ecip-1022.md
@@ -4,6 +4,7 @@ ecip: 1022
 title: Generalized Version Bits Voting for Consensus Soft and Hard Forks
 status: Draft
 type: Meta
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/190
 author: Wei Tang (@sorpaas)
 created: 2017-06-28
 license: Apache-2.0
