1076: clarify on signaling range

--- a/_specs/ecip-1076.md
+++ b/_specs/ecip-1076.md
@@ -30,7 +30,7 @@ Eventually, the miners have to signal in favor of one option.
 ### Signaling Process
 Solo miners, mining farms, and mining pools can signal support by adjusting their mining node to signal in favor of one of the proposals that was promoted to "Last Call" state in the previous stage. Details on the signaling can be found in the subsequent subsections.
 
-This stage is finished once more than **70% of the last 100_000 blocks** were signed with a signal in favor of one proposal.
+The signaling process shall be considered finished once more than **70% of the last 1_000_000 blocks** were signed with a signal in favor of one proposal.
 
 ##### Miner Extradata Prefix
 The miner signaling is specified as follows: The miner prepend the miner's extra data with 5 bytes of signaling data which shall be recorded in the Ethereum Classic block headers. The 5 bytes contain the following:
