--- a/_specs/ecip-1061.md
+++ b/_specs/ecip-1061.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1061
-title: Aztlán EVM and Protocol Upgrades (Yingchun Flavor)
+title: Aztlán EVM and Protocol Upgrades (Yingchun Edition)
 status: Last Call
 type: Meta
 author: Talha Cross (@soc1c), Wei Tang (@sorpaas)
@@ -15,7 +15,7 @@ Enable the outstanding Ethereum Foundation _Istanbul_ network protocol upgrades 
 Classic network without any gas-cost assumptions in a hard-fork code-named _Aztlán_ to enable 
 maximum compatibility across these networks. 
 
-The _Yingchun_ Flavor refers to the preferred variant of _Aztlán_ without any repricing of state-trie 
+The _Yingchun_ Edition refers to the preferred variant of _Aztlán_ without any repricing of state-trie 
 dependent opcodes as previously proposed in ECIP-1072.
 
 ### Abstract
