Tidying up author formatting, so it displays cleanly in the web view.

--- a/_specs/ecip-1047.md
+++ b/_specs/ecip-1047.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1047
 title: Reduce Gas Limit to 1 Million
-author: Anthony Lusardi (ethereumclassicanthony@gmail.com)
+author: Anthony Lusardi (@pyskell)
 status: Draft
 type: Informational
 created: 2019/1/3
