--- a/_specs/ecip-1050.md
+++ b/_specs/ecip-1050.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1050
 title: Status Codes
-author: Brooklyn Zelenka [@expede](https://github.com/expede), [Boris Mann](https://github.com/bmann)
+author: Brooklyn Zelenka (@expede), Boris Mann (@bmann)
 discussions-to: https://fission.codes/blockchain/ethclassic
 status: Last Call
 type: Standars Track
