--- a/_specs/ecip-1053.md
+++ b/_specs/ecip-1053.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1053
 title: Add OpenRPC Service Discovery To JSON-RPC Services
-author: Shane Jonas, Zachary Belford
+author: Shane Jonas (@shanejonas), Zachary Belford (@BelfordZ)
 discussions-to: https://github.com/etclabscore/ECIPs/issues/16
 status: Draft
 type: Standards Track
