--- a/_specs/ecip-1062.md
+++ b/_specs/ecip-1062.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1062
 title: Submit Block RPC
-author: Zachary Belford, zachary.b@etclabs.org
+author: Zachary Belford (@BelfordZ)
 discussions-to: Community Discord #ecips
 status: Draft
 type: Standards Track
