--- a/_specs/ecip-1064.md
+++ b/_specs/ecip-1064.md
@@ -4,7 +4,7 @@ ecip: 1064
 title: Communicating with 3rd parties
 status: Draft
 type: Meta
-author: Dean Pappas (deancpappas@gmail.com)
+author: Dean Pappas (@bobthegrownup)
 discussions-to: Community Discord #ecips
 created: 2019-08-06
 ---
