--- a/_specs/ecip-1067.md
+++ b/_specs/ecip-1067.md
@@ -5,7 +5,7 @@ title: Standardize OS Level Management of Signature Handling ("invoke-signer")
 status: Draft
 type: Interface
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/147
-author: Zac Mitton
+author: Zac Mitton (@zmitton)
 created: 2019-02-07
 ---
 
