--- a/_specs/zh/ecip-1017.md
+++ b/_specs/zh/ecip-1017.md
@@ -2,7 +2,7 @@
 lang: zh
 ecip: 1017
 title: ETC 货币政策和铸币方案最终修改 
-author: Matthew Mazur 5n4pr011@gmail.com 
+author: Matthew Mazur <5n4pr011@gmail.com>
 translator: Roy (以太坊原链协会 ECC) QQ:1251433202 
 status: Final
 type: Standards Track
